# flick

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  build.py  conanfile.py  config.json  setup.py  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: app.config.cmake
demo/: CMakeLists.txt  conanfile.txt  democonfig.h.in  setting.nn
demo/src/: constants.hxx  main.cc
flick/: CMakeLists.txt
flick/src/app/: app.cpp  app.h
flick/src/constants/: colors.hpp  constant.hpp
flick/src/downloader/: downloader.cpp  downloader.h
flick/src/flick/: flick.cpp  flick.hpp
flick/src/log/: log.cpp  log.h
flick/src/main/: main.cpp  main.h
flick/src/processmanager/: processmanager.cpp  processmanager.h
flick/src/projectgenerator/: projectgenerator.cpp  projectgenerator.h
flick/src/projectsetting/: projectsetting.cpp  projectsetting.h
flick/src/rt/: rt.cpp  rt.h
flick/src/unittester/: unittester.cpp  unittester.h
flick/src/unzip/: unzip.cpp  unzip.h
flick/src/userinfo/: userinfo.cpp  userinfo.h
flick/src/utester/: utester.cpp  utester.h
flick/src/utils/: utils.cpp  utils.h
flick/src/yaml/: yaml.cpp  yaml.h
profiles/: windows_profile
res/: code.yaml  config.cmake  config.h.in  config.json  default  flick.vsconfig  solixconfig.h.in
src/: main.cc
src/app/: app.cc  app.h
src/aura/: aura.cc  aura.hpp
src/constants/: constant.hpp
src/downloader/: downloader.cc
src/flick/: flick.cc  flick.hpp
src/includes/aura/: aura.cc
src/includes/constants/: constant.hpp
src/log/: log.cc  log.h
src/main/: main.cpp  main.h
src/processmanager/: processmanager.cc  processmanager.h
src/projectgenerator/: projectgenerator.cc  projectgenerator.h
src/projectsetting/: projectsetting.cc  projectsetting.h
src/rt/: rt.cc  rt.h
src/solix/: solix.cc  solix.hpp
src/unittester/: unittester.cc  unittester.h
src/userinfo/: userinfo.cc  userinfo.h
src/utils/: utils.cc  utils.h
tests/: CMakeLists.txt  main.cc
tests/src/: main.cpp
utool/: CMakeLists.txt  main.cc
utool/src/: main.cpp
